Fix responsibility, footer alignment

--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ header {
 }
 
 main {
+	flex: 4;
 	padding: 20px;
 	/* Layout inside */
 	display: flex;
@@ -57,6 +58,7 @@ section {
 footer {
 	flex: 1;
 	background-color: #FE7F2D;
+	display: flex;
 }
 
 /* Others */
@@ -88,7 +90,8 @@ img {
 
 footer > ul {
 	width: 100%;
-	height: 100%;
+	flex: 1;
+	padding: 50px;
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
